containers/email-verification-service/k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-verification-service
  namespace: 2060-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - em-vs.dev.2060.io
        - a.em-vs.dev.2060.io
        - q.em-vs.dev.2060.io
      secretName: em-vs.dev.2060.io-cert
  rules:
    - host: em-vs.dev.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: email-verification-service
                 port:
                   number: 3001
    - host: a.em-vs.dev.2060.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: email-verification-service
                 port:
                   number: 3000
    - host: q.em-vs.dev.2060.io
      http:
        paths:
          - path: /avatar.png
            pathType: Prefix
            backend:
              service:
                 name: email-verification-service
                 port:
                   number: 2902
